# feasibility_simplex_solver

./: CMakeLists.txt  README.md  constraint_parser.cpp  constraint_parser.h  constraints.txt  main.cpp  simplex_solver.cpp  simplex_solver.h
examples/: feasible_constraints.fs  unfeasible_constraints.fs  unfeasible_constraints_1.fs
